spacing fix

--- a/styles.css
+++ b/styles.css
@@ -408,7 +408,7 @@ pre {
   background-color: #fff;
   font-size: 13px;
   border-radius: 3px;
-  margin-top: 59px;
+  margin-top: 39px;
   margin-bottom: 80px;
 }
 #main-content-container::after {
@@ -430,6 +430,7 @@ pre {
   min-height: 200px !important;
   background-color: #f8f8f8;
   max-width: 1200px;
+  padding: 17px;
 }
 .aui-header .aui-quicksearch input {
   width: 300px;
